--- a/DOCTYPE 1.html
+++ b/DOCTYPE 1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html>language="en"
+  <html>language="en"<html>
     <title>This is DOCTYPE</title>
     <p>Hello World!</p>
 </html>
