--- a/Assignment.html
+++ b/Assignment.html
@@ -9,8 +9,8 @@
                 <h1>THIS IS WHERE ALL THE CONTENT ON THE WEBPAGE GOES.</h1>  
                 <h3>And more stuff goes here</h3>
                 <h6>MORE MORE MORE just more more and more. I love learning this stuff and just going into it.</h6>
-                I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a>
-                <img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg"width="1024" height="576">
+                <br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br>
+                <img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg" width="350" height="240">
             </main>
         </body>
     <footer>
