--- a/Assignment.html
+++ b/Assignment.html
@@ -9,8 +9,9 @@
                 <h1>THIS IS WHERE ALL THE CONTENT ON THE WEBPAGE GOES.</h1>  
                 <h3>And more stuff goes here</h3>
                 <h6>MORE MORE MORE just more more and more. I love learning this stuff and just going into it.</h6>
-                <br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br>
-                <img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg" width="350" height="240">
+                You see all my stuff???
+                <br><img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg" width="350" height="240"></br>
+                <br><br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br></br>
             </main>
         </body>
     <footer>
