--- a/Assignment.html
+++ b/Assignment.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
     </head>
         <body>
+            
             <main>
                 <h1>THIS IS WHERE ALL THE CONTENT ON THE WEBPAGE GOES.</h1>  
                 <h3>And more stuff goes here</h3>
@@ -12,10 +13,12 @@
                 You see all my stuff???
                 <br><img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg" width="350" height="240"></br>
                 <br><br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br></br>
+                    <nav>
+                        Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
             </main>
         </body>
     <footer>
-        By: Lewis Meyers
+        <br>By: Lewis Meyers</br>
         Follow me @html
     </footer>
 </html>
