--- a/Assignment.html
+++ b/Assignment.html
@@ -15,6 +15,7 @@
                 <br><br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br></br>
                     <nav>
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
+                    </nav>
             </main>
         </body>
     <footer>
