--- a/Assignment.html
+++ b/Assignment.html
@@ -15,13 +15,11 @@
                     <nav>
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
                     </nav>
-                    
                 <p>I really want to say something about all this "mumbo jumbo".</p>
                 <q>Life is like a a box of chocolates</q>
-            
                 </main>
         </body>
-    <footer>
+    <hr><footer>
         <br>By: Lewis Meyers</br>
         Follow me @html
     </footer>
