Just messing around

--- a/Assignment.html
+++ b/Assignment.html
@@ -16,7 +16,7 @@
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
                     </nav>
                 <p>I really want to say something about all this "mumbo jumbo".</p>
-                <q>Life is like a a box of chocolates</q>
+               <p style="margin-left:10%; margin-right 10%;"><q>Life is like a a box of chocolates</q>
                 </main>
         </body>
     <hr><footer>
