--- a/Assignment.html
+++ b/Assignment.html
@@ -16,7 +16,8 @@
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
                     </nav>
                 <p>I really want to say something about all this "mumbo jumbo".</p>
-               <p style="margin-left:10%; margin-right 10%;"><q>Life is like a a box of chocolates</q>
+                <p style="margin-left:10%; margin-right 10%;"><q>Life is like a a box of chocolates</q>
+                <p style="margin-left:24%; margin-right 24%;"> - Forest Gump
                 </main>
         </body>
     <hr><footer>
