--- a/Assignment.html
+++ b/Assignment.html
@@ -12,7 +12,7 @@
                 You see all my stuff???
                 <br><img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg" width="350" height="240"></br>
                 <br>The below video is just a filler.</br>
-                <br><iframe width="500" height="500" src="https://www.youtube.com/embed/zJwbZX4i-N4"</iframe></br>
+                <br><center><iframe width="500" height="500" src="https://www.youtube.com/embed/zJwbZX4i-N4"</iframe></center></br>
                 <br><br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br></br>
                     <nav>
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
