--- a/Assignment.html
+++ b/Assignment.html
@@ -4,24 +4,24 @@
         <title>Monkey</title>
         <meta charset="utf-8">
     </head>
-        <body>
+        <body><center>
             <main>
                 <h1>THIS IS WHERE ALL THE CONTENT ON THE WEBPAGE GOES.</h1>  
                 <h3>And more stuff goes here</h3>
                 <h6>MORE MORE MORE just more more and more. I love learning this stuff and just going into it.</h6>
                 You see all my stuff???
                 <br><img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg" width="350" height="240"></br>
-                <br>The below video is just a filler.</br>
-                <br><center><iframe width="500" height="500" src="https://www.youtube.com/embed/zJwbZX4i-N4"</iframe></center></br>
                 <br><br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br></br>
                     <nav>
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
                     </nav>
-                <p>I really want to say something about all this "mumbo jumbo".</p>
-                <p style="margin-left:10%; margin-right 10%;"><q>Life is like a a box of chocolates</q>
-                <p style="margin-left:24%; margin-right 24%;"> - Forest Gump
+                <p>I really want to say something about all this "mumbo jumbo" that is this mess of a website.</p>
+                <q>Life is like a a box of chocolates</q>
+                <p>- Forest Gump
                 </main>
-        </body>
+                <br>The below video is just a filler.</br>
+                <div style=float: left; margin: 0 10px 1px 0:><br><iframe width="500" height="500" src="https://www.youtube.com/embed/zJwbZX4i-N4"</iframe></center></div></br>
+        </body></center>
     <hr><footer>
         <br>By: Lewis Meyers</br>
         Follow me @html
