--- a/Assignment.html
+++ b/Assignment.html
@@ -11,7 +11,7 @@
                 <h6>MORE MORE MORE just more more and more. I love learning this stuff and just going into it.</h6>
                 You see all my stuff???
                 <br><img src="file:///Users/lewismeyers/Documents/GitHub/Images/Stuff.jpg" width="350" height="240"></br>
-                <br><br>I also like dogs.<a href="FluffyDog.html"> CLICK ME TO PET!</a></br></br>
+                <br><br>I also like dogs.<a href="FluffyDog.html" target="_blank"> CLICK ME TO PET!</a></br></br>
                     <nav>
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
                     </nav>
