--- a/Code/Assignment.html
+++ b/Code/Assignment.html
@@ -10,8 +10,8 @@
                 <h3>And more stuff goes here</h3>
                 <h3>MORE MORE MORE just more more and more. I love learning this stuff and just going into it.</h3>
                 You see all my stuff???
-                <br><img src="../HTML-and-CSS-Projects/Stuff.jpg" width="350" height="240"></br>
-                <br><br>I also like dogs.<a href="../HTML-and-CSS-Projects/FluffyDog.html" target="_blank"> CLICK ME TO PET!</a></br></br>
+                <br><img src="../Photos/Stuff.jpg" width="350" height="240"></br>
+                <br><br>I also like dogs.<a href="../Photos/goldenretriever.jpg" target="_blank"> CLICK ME TO PET!</a></br></br>
                     <nav>
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
                     </nav>
