--- a/Code/Assignment.html
+++ b/Code/Assignment.html
@@ -15,7 +15,7 @@
                     <nav>
                         Heres a video of some Boerboel puppies! <a href="https://www.youtube.com/watch?v=qyXD5YI2-L8}" target="_blank">Boerboel Puppies</a>
                     </nav>
-                <p>I really want to say something about all this "mumbo jumbo" that is this mess of a website.</p>
+                <p><font color="#FF0000> I really want to say something about all this "mumbo jumbo" that is this mess of a website.</font></p>
                 <q>Life is like a a box of chocolates</q>
                 <p>- Forest Gump
                 </main>
