--- a/Basic_HTML_and_CSS.html/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS.html/Basic_HTML_3.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
+    <body style="background-color: aqua;"
     <head>
-        <div style="color:blueviolet">
-            <title>Basic_HTML_3</title>
-            <body>
-            <h2>I enjoy what I'm doing.</h2>
-            <p><i>"If your depressed your living in the past, if your anxious then our living in the future, if your at peace then your livin 
-                in the present." - Lao Tzu</i></p></body>
-            </head>
+        <style>
+            p {
+                color: red; text-align: center;
+            }
+        </style>
+                <title><Basic_HTML_3</center></title>
+                <body>
+                    <h1><center>I enjoy what I'm doing.</center>
+                        <p><i>"If your depressed your living in the past, if your anxious then our living in the future, 
+                        if your at peace then your livin in the present." - Lao Tzu</i></p>
+                </body>
+                    <p>The above quote is something I can live by. 
+                        Its hard at times but its true.</p>
+                    </h1>
+    </head>
 </html>
