--- a/Basic_HTML_and_CSS.html/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS.html/Basic_HTML_3.html
@@ -2,11 +2,7 @@
 <html>
     <body style="background-color: aqua;"
     <head>
-        <style>
-            p {
-                color: red; text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
                 <title><Basic_HTML_3</center></title>
                 <body>
                     <h1><center>I enjoy what I'm doing.</center>
