More cool stuff

--- a/Basic_HTML_and_CSS.html/HTML_Table.html
+++ b/Basic_HTML_and_CSS.html/HTML_Table.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <link rel="stylesheet" type="text/css" href="Basic_CSS_2.5.css"
     <body>
         <center>
         <h1><center>Leading Phone Manufacturers 2021</center></h1>
