--- a/Basic_HTML_and_CSS.html/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS.html/Basic_HTML_5.html
@@ -2,5 +2,7 @@
 <html>
     <body>
         <link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
-        <p>Styled font</p>
+        <h1>RANDOM</h1>
+        <p>Apple &gt Samsung</p>
+        <p>Google &equals; Innovative</p>
     </body>
