--- a/Basic_HTML_and_CSS.html/HTML_Lists.html
+++ b/Basic_HTML_and_CSS.html/HTML_Lists.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <font size="5">
+    <link rel="stylesheet" type="text/css" href="CSS_Lists.css"
     <ol>
         <li>Drink 1</li>
         <li>Drink 2</li>
@@ -12,4 +14,5 @@
         <li>Shonen</li>
         <li>2D Animation</li>
     </ul>
+    </font>
 </html>
