--- a/Basic_HTML_and_CSS.html/Basic_HTML_and_CSS_Assignment_Step_195.html
+++ b/Basic_HTML_and_CSS.html/Basic_HTML_and_CSS_Assignment_Step_195.html
@@ -7,9 +7,9 @@
                 text-align: center;
                 margin: auto;
             }
-/*I really don't understand how the border stretches that far and cannot just go around the 
-text. I'm pretty sure I did that before but I don't understand now how that would work because I 
-I did something wrong and cannot find it now.*/
+/*I need help figuring out how to just remove the border 
+and keep the bullet points next to the text. When I try and remove the border
+the bullets leave the text then and then it looks not like how I want it.*/
             ol, ul, li {
                 border: 1px solid red;
                 list-style-type: circle;
