--- a/Basic_HTML_and_CSS.html/Basic_HTML_and_CSS_Assignment_Step_195.html
+++ b/Basic_HTML_and_CSS.html/Basic_HTML_and_CSS_Assignment_Step_195.html
@@ -17,10 +17,13 @@ the bullets leave the text then and then it looks not like how I want it.*/
                 width: 30%;
                 margin: auto;
             }
+            h1 {
+                text-shadow: 2px 3px 5px #30b26a;
+            }
         </style>
         <body>
             <h1>Welcome To The Start</h1>
-            <h2>We wills start with list.<h2>
+            <h2>We will start with list.<h2>
                 <ol>
                     <li>Mask Off</li>
                     <li>Mask Off</li>
