--- a/Basic_HTML_and_CSS.html/Index.html
+++ b/Basic_HTML_and_CSS.html/Index.html
@@ -5,39 +5,91 @@
         <head>
             <meta charset="utf-8">
             <title>Index.html</title>
-            <h1>HERO TIME</h1>
-            <hr>
+        <!--NAV-->
             <nav>
                 <div>
                     <div>
                         <ul>
-                            <span>
-                            <li>HOME</li>
-                            <li>ABOUT</li>
-                            <li>GALLERY</li>
-                            </span>
+                            <a href="#home" id="link"><li>HOME</li></a>
+                            <a href="#about" id="link"><li>ABOUT</li></a>
+                            <a href="#gallery" id="link"><li>GALLERY</li></a>
                         </ul>
                     </div>
                 </div>
             </nav>
         </head>
-        <div>
+        <!--End NAV-->
+
+        <!--HOME-->
+        <div id="home">
             <div>
-                <br>
-                <section><h1>Text</h1></section>
-                    <article>
-                        <h3>Text</h3>
-                            <p>Mattheus Meyers<br>TextText
-                                TextText <time>10:00pm</time> Text 
-                                <details>
-                                    <summary>Text</summary>
-                                    My Summarysoemoen 
-                                </details>
-                            </p>
-                    </article>
-                </section>
+                <div>
+                    <span>HERO DRAFT</span>
+                </div>
             </div>
         </div>
+        <!--END HOME-->
+
+        <!--GALLERY-->
+        <section>
+            <div id="gallery">
+                <h1>GALLERY</h1>
+                <div>
+                    <div>
+
+                        <!--PHOTO-CONTAINER 1-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                        <!--END PHOTO-CONTAINER 1--->
+
+                <!--CHOOSE YOUR HERO PART-->
+        <section>
+            <div id="Hero ID">
+                <div>
+                    <h1>HERO CHOICE</h1>
+                    <div>
+                        <h2><span>Choose Wisely</span></h2>
+                        <br />Pick your team!
+                    </h2>
+                    <p>
+                        Please provide basic information
+                    </p>
+                    <div>
+                        <form action="" method="post">
+                            <input class="HERO CHOICE" type="text" value="First Name">
+                            <input class="HERO CHOICE" type="text" value="Last Name">
+                            <input class="HERO CHOICE" type="text" value="Email">
+                            <div class="form-spacer">
+                                <label class="terms">Terms and Conditions</label>
+                            </div>
+                            <div>
+                                <input type="submit" value="Submit">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--END HERO CHOICE-->
+
+    <!--FOOTER which is just an example for now-->
+    <div>
+        www.herotime.hero &nbsp; &copy;2021
+    </div>
+    <!--END FOOTER-->
+
+
+
+
+    
 
     </body>
 </html>
