--- a/Basic_HTML_and_CSS.html/Index.html
+++ b/Basic_HTML_and_CSS.html/Index.html
@@ -33,11 +33,22 @@
         <!--GALLERY-->
         <section>
             <div id="gallery">
-                <h1>GALLERY</h1>
+                <h1>Gallery</h1>
                 <div>
-                    <div>
 
                         <!--PHOTO-CONTAINER 1-->
+                        <div>
+                            <div>
+                                <img src="./Images/Thumbs_#/thumbnail_1.jpg">
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 1--->
+
+                        <!--PHOTO-CONTAINER 2-->
                         <div>
                             <div>
                                 <div>
@@ -46,10 +57,91 @@
                                 </div>
                             </div>
                         </div>
-                    </section>
-                        <!--END PHOTO-CONTAINER 1--->
+                        <!--END PHOTO-CONTAINER 2--->
 
-                <!--CHOOSE YOUR HERO PART-->
+                        <!--PHOTO-CONTAINER 3-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 3--->
+
+                        <!--PHOTO-CONTAINER 4-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 4--->
+
+                        <!--PHOTO-CONTAINER 5-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 5--->
+
+                        <!--PHOTO-CONTAINER 6-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 6--->
+
+                        <!--PHOTO-CONTAINER 7-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 7--->
+
+                        <!--PHOTO-CONTAINER 8-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 8--->
+
+                        <!--PHOTO-CONTAINER 9-->
+                        <div>
+                            <div>
+                                <div>
+                                    <h3>Click To Enlarge</h3>
+                                    <p>Some many super heroes to choose from</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--END PHOTO-CONTAINER 9--->
+
+                </div>
+            </div>
+        </section>
+        <!--END GALLERY-->
+
+        <!--CHOOSE YOUR HERO PART-->
         <section>
             <div id="Hero ID">
                 <div>
