--- a/Basic_HTML_and_CSS.html/Index.html
+++ b/Basic_HTML_and_CSS.html/Index.html
@@ -51,6 +51,7 @@
                         <!--PHOTO-CONTAINER 2-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_2.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -62,6 +63,7 @@
                         <!--PHOTO-CONTAINER 3-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_3.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -73,6 +75,7 @@
                         <!--PHOTO-CONTAINER 4-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_4.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -84,6 +87,7 @@
                         <!--PHOTO-CONTAINER 5-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_5.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -95,6 +99,7 @@
                         <!--PHOTO-CONTAINER 6-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_6.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -106,6 +111,7 @@
                         <!--PHOTO-CONTAINER 7-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_7.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -117,6 +123,7 @@
                         <!--PHOTO-CONTAINER 8-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_8.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -128,6 +135,7 @@
                         <!--PHOTO-CONTAINER 9-->
                         <div>
                             <div>
+                                <img src="./Images/Thumbs_#/thumbnail_9.jpg">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
