--- a/Basic_HTML_and_CSS.html/Index.html
+++ b/Basic_HTML_and_CSS.html/Index.html
@@ -39,7 +39,7 @@
                         <!--PHOTO-CONTAINER 1-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_1.jpg">
+                                <img src="../Images/Thumbs/thumbnail_1.jpg" height="300" width="220">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -51,7 +51,7 @@
                         <!--PHOTO-CONTAINER 2-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_2.jpg">
+                                <img src="../Images/Thumbs/thumbnail_2.jpg" height="400" width="350">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -63,7 +63,7 @@
                         <!--PHOTO-CONTAINER 3-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_3.jpg">
+                                <img src="../Images/Thumbs/thumbnail_3.jpg" height="350" width="220">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -75,7 +75,7 @@
                         <!--PHOTO-CONTAINER 4-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_4.jpg">
+                                <img src="../Images/Thumbs/thumbnail_4.jpg" height="300" width="220">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -87,7 +87,7 @@
                         <!--PHOTO-CONTAINER 5-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_5.jpg">
+                                <img src="../Images/Thumbs/thumbnail_5.jpg" height="300" width="300">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -99,7 +99,7 @@
                         <!--PHOTO-CONTAINER 6-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_6.jpg">
+                                <img src="../Images/Thumbs/thumbnail_6.webp" height="300" width="380">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -111,7 +111,7 @@
                         <!--PHOTO-CONTAINER 7-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_7.jpg">
+                                <img src="../Images/Thumbs/thumbnail_7.jpg" height="300" width="300">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -123,7 +123,7 @@
                         <!--PHOTO-CONTAINER 8-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_8.jpg">
+                                <img src="../Images/Thumbs/thumbnail_8.jpg" height="390" width="270">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
@@ -135,7 +135,7 @@
                         <!--PHOTO-CONTAINER 9-->
                         <div>
                             <div>
-                                <img src="./Images/Thumbs_#/thumbnail_9.jpg">
+                                <img src="../Images/Thumbs/thumbnail_9.jpg" height="370" width="290">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
