--- a/One-page Website/one_page_Website.html
+++ b/One-page Website/one_page_Website.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="utf-8">
-    
     <style>
         ul{
             text-align: center; list-style-position:inside;
         }
+        body{
+            text-align: center;
+        }
     </style>
-     
     <div style="background-color: antiquewhite;">
+
     <!--NAV-->
     <div>
         <div>
@@ -22,6 +24,17 @@
         </div>
     </div>
     <!--END NAV-->
+
+    <body>
+     <!--Home-->
+     <section>
+            <div>
+                <div>
+                    <p>This is Home!</p>
+                </div>
+            </div>
+    </section>
+    <!--END Home-->
 
     <!--Gallery-->
     <section>
@@ -73,8 +86,10 @@
     <!--Footer-->
     <div>
         <div>
-            <p>Thanks for stopping by! Come back soon</p>
-            <p>&copy 2021</p>
+            <footer>
+                <p>Thanks for stopping by! Come back soon</p>
+                <p>&copy 2021</p>
+            </footer>
         </div>
     </div>
     <!--END Footer-->
