--- a/Basic_HTML_and_CSS.html/CSS_Menu_Rollover.html
+++ b/Basic_HTML_and_CSS.html/CSS_Menu_Rollover.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <title>CSS Drop-down Menu Demo</title>
-        <link rel="stylesheet" href="CSS_Menu_Rollover.html">
+        <link rel="stylesheet" href="Menu_Rollover.css">
     </head>
     <body>
         <div class="wrap">
-            <div class="menu">
+            <div class="menu-container">
                 <ul class="menu">
                     <li>Home</li>
                     <li>About</li>
-                    <li>Portfolio</li>
+                    <li>Portfolio
                         <ul class="submenu">
                             <li>Page 1</li>
                             <li>Page 2</li>
