--- a/Basic_HTML_and_CSS.html/Index.html
+++ b/Basic_HTML_and_CSS.html/Index.html
@@ -4,7 +4,7 @@
     <body>
         <head>
             <meta charset="utf-8">
-            <title>Index.html</title>
+            <title>HERO ARMY</title>
         <!--NAV-->
             <nav>
                 <div>
@@ -51,7 +51,7 @@
                         <!--PHOTO-CONTAINER 2-->
                         <div>
                             <div>
-                                <img src="../Images/Thumbs/thumbnail_2.jpg" height="400" width="350">
+                                <img src="../Images/Thumbs/thumbnail_2.jpg" height="480" width="500">
                                 <div>
                                     <h3>Click To Enlarge</h3>
                                     <p>Some many super heroes to choose from</p>
