--- a/Basic_HTML_and_CSS.html/Index_2.html
+++ b/Basic_HTML_and_CSS.html/Index_2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title><Index_2.html</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="shared.css">
         <link rel="stylesheet" href="">
     </head>
     <body>
