--- a/One-page Website/one_page_Website.html
+++ b/One-page Website/one_page_Website.html
@@ -1,97 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="utf-8">
-    <style>
-        ul{
-            text-align: center; list-style-position:inside;
-        }
-        body{
-            text-align: center;
-        }
-    </style>
-    <div style="background-color: antiquewhite;">
+    <head>
+        <link rel="stylesheet" href="./CSS/one_page_website.css">
+    </head>
+        <style>
+            ul{
+                text-align: center; list-style-position:inside;
+            }
+            body{
+                text-align: center;
+            }
+        </style>
+        <div style="background-color: antiquewhite;">
 
-    <!--NAV-->
-    <div>
+        <!--NAV-->
         <div>
             <div>
-                <ul>
-                    <a href="#home" id="link"><li>HOME</li></a>
-                    <a href="#gallery" id="link"><li>GALLERY</li></a>
-                    <a href="#video" id="link"><li>VIDEOS</li></a>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!--END NAV-->
-
-    <body>
-     <!--Home-->
-     <section>
-            <div>
                 <div>
-                    <p>This is Home!</p>
-                </div>
-            </div>
-    </section>
-    <!--END Home-->
-
-    <!--Gallery-->
-    <section>
-        <div id="gallery">
-            <div>
-                <div>
-                    <h1>GALLERY</h1>
-                        <p>Place Holder</p>
-                        <img src="../Images/faraday_future.jpeg">
+                    <ul>
+                        <a href="#home" id="link"><li>HOME</li></a>
+                        <a href="#gallery" id="link"><li>GALLERY</li></a>
+                        <a href="#video" id="link"><li>VIDEOS</li></a>
+                    </ul>
                 </div>
             </div>
         </div>
-    </section>
-    <!--END Gallery-->
+        <!--END NAV-->
 
-    <!--Videos-->
-    <section>
-        <div id="videos">
+        <body>
+            <!--Home-->
+            <section>
+                    <div>
+                        <div>
+                            <p>This is Home!</p>
+                        </div>
+                    </div>
+            </section>
+            <!--END Home-->
+
+            <!--Gallery-->
+            <section>
+                <div id="gallery">
+                    <div>
+                        <div>
+                            <h1>GALLERY</h1>
+                                <p>Place Holder</p>
+                                <img src="../Images/faraday_future.jpeg">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--END Gallery-->
+
+            <!--Videos-->
+            <section>
+                <div id="videos">
+                    <div>
+                        <div>
+                            <h1>VIDEO</h1>
+                            <p>Place Holder</p>
+                            <iframe width="800" height="00" src="https://www.youtube.com/embed/B9YrK_jWzv0" title="YouTube video player" frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+                            picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--END Videos-->
+
+            <!--Contact-->
             <div>
                 <div>
-                    <h1>VIDEO</h1>
-                    <p>Place Holder</p>
-                    <iframe width="600" height="600" src="https://www.youtube.com/embed/B9YrK_jWzv0" 
-                    title="YouTube video player" frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
-                    picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <br>
+                        <p>Let us know who you are please</p>
+                            <form action="" method="post">
+                                <input type="text" value="First Name">
+                                <input type="text" value="Last Name">
+                                <input type="text" value="Email">
+                                <div class="form-spacer">
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!--END Videos-->
+            <!--END Contact-->
 
-    <!--Contact-->
-    <div>
-        <div>
+            <!--Footer-->
             <div>
-                <br>
-                <p>Let us know who you are please</p>
-                    <form action="" method="post">
-                        <input type="text" value="First Name">
-                        <input type="text" value="Last Name">
-                        <input type="text" value="Email">
-                        <div class="form-spacer">
+                <div>
+                    <footer>
+                        <p>Thanks for stopping by! Come back soon</p>
+                        <p>&copy 2021</p>
+                    </footer>
+                </div>
             </div>
-        </div>
-    </div>
-    <!--END Contact-->
-
-    <!--Footer-->
-    <div>
-        <div>
-            <footer>
-                <p>Thanks for stopping by! Come back soon</p>
-                <p>&copy 2021</p>
-            </footer>
-        </div>
-    </div>
-    <!--END Footer-->
-</body>
+            <!--END Footer-->
+        </body>
 </html>
