--- a/One-page Website/one_page_Website.html
+++ b/One-page Website/one_page_Website.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="utf-8">
-    <head>
-        <link rel="stylesheet" href="./CSS/one_page_website.css">
-    </head>
-        <style>
-            ul{
-                text-align: center; list-style-position:inside;
-            }
-            body{
-                text-align: center;
-            }
-        </style>
+        <head>
+            <link rel="stylesheet" href="./CSS/one_page_website.css">
+        </head>
+            <style>
+                ul{
+                    text-align: center; list-style-position:inside;
+                }
+                body{
+                    text-align: center;
+                }
+            </style>
         <div style="background-color: antiquewhite;">
-        <body>
+
         <!--NAV-->
         <div>
             <div>
@@ -28,6 +28,7 @@
         </div>
         <!--END NAV-->
 
+        <body>
             <!--Home-->
             <section>
                     <div>
@@ -45,7 +46,7 @@
                         <div>
                             <h1>GALLERY</h1>
                                 <p>Place Holder</p>
-                                <img src="../Images/faraday_future.jpeg">
+                                <img src="">
                         </div>
                     </div>
                 </div>
@@ -59,7 +60,7 @@
                         <div>
                             <h1>VIDEO</h1>
                             <p>Place Holder</p>
-                            <iframe width="800" height="800" src="https://www.youtube.com/embed/B9YrK_jWzv0" title="YouTube video player" frameborder="0" 
+                            <iframe width="800" height="800" src=https://www.youtube.com/embed/B9YrK_jWzv0 title="YouTube video player" frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
                             picture-in-picture" allowfullscreen></iframe>
                         </div>
