--- a/Basic_HTML_and_CSS.html/Index_2.html
+++ b/Basic_HTML_and_CSS.html/Index_2.html
@@ -1,8 +1,8 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title><Index_2.html</title>
+        <title>Index_2.html</title>
         <link rel="stylesheet" href="shared.css">
         <link rel="stylesheet" href="animations.css">
     </head>
@@ -40,8 +40,8 @@
                         
                 <!-----------PHOTO-CONTAINER 1------------>
                         <div class="photo-container">
-                            <div class="photo"
-                                <img src="../Images/faraday_future.jpeg" height="300" width="220">
+                            <div class="photo">
+                                <img src="../Images/Thumbs/thumbnail_1.jpg" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>Draft your HEROES and protect the world!</p>
@@ -51,9 +51,9 @@
                 <!-----------END PHOTO-CONTAINER 1--------->
 
                 <!-----------PHOTO-CONTAINER 2------------>
-                        <div class="photo-container">
-                            <div class="photo"
-                                <img src="../Images/Thumbs/thumbnail_2.jpg" alt="">
+                        <div class="photo-container>
+                            <div class="photo">
+                                <img src="../Images/Thumbs/thumbnail_2.jpg" height="200" width="200" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>Draft your HEROES and protect the world!</p>
@@ -64,7 +64,7 @@
 
                 <!------------PHOTO-CONTAINER 3------------>
                         <div class="photo-container">
-                            <div class="photo"
+                            <div class="photo">
                                 <img src="../Images/Thumbs/thumbnail_3.jpg" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
@@ -76,7 +76,7 @@
 
                 <!------------PHOTO-CONTAINER 4------------>
                         <div class="photo-container">
-                            <div class="photo"
+                            <div class="photo">
                                 <img src="../Images/Thumbs/thumbnail_4.jpg" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
@@ -88,7 +88,7 @@
 
                 <!------------PHOTO-CONTAINER 5------------>
                         <div class="photo-container">
-                            <div class="photo"
+                            <div class="photo">
                                 <img src="../Images/Thumbs/thumbnail_5.jpg" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
@@ -100,7 +100,7 @@
 
                 <!------------PHOTO-CONTAINER 6------------>
                         <div class="photo-container">
-                            <div class="photo"
+                            <div class="photo">
                                 <img src="../Images/Thumbs/thumbnail_6.webp" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
@@ -112,7 +112,7 @@
 
                 <!------------PHOTO-CONTAINER 7------------>
                         <div class="photo-container">
-                            <div class="photo"
+                            <div class="photo">
                                 <img src="../Images/Thumbs/thumbnail_7.jpg" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
@@ -124,8 +124,8 @@
 
                 <!------------PHOTO-CONTAINER 8------------>
                         <div class="photo-container">
-                            <div class="photo"
-                                <img src="../Images/Thumbs/thumbnail_7.jpg">
+                            <div class="photo">
+                                <img src="../Images/Thumbs/thumbnail_8.jpg">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>Draft your HEROES and protect the world!</p>
@@ -136,7 +136,7 @@
 
                 <!------------PHOTO-CONTAINER 9------------>
                         <div class="photo-container">
-                            <div class="photo"
+                            <div class="photo">
                                 <img src="../Images/Thumbs/thumbnail_9.jpg" alt="">
                                 <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
