--- a/One-page Website/one_page_Website.html
+++ b/One-page Website/one_page_Website.html
@@ -46,7 +46,7 @@
                         <div>
                             <h1>GALLERY</h1>
                                 <p>Place Holder</p>
-                                <img src="">
+                                <img src="../Images/faraday_future.jpeg">
                         </div>
                     </div>
                 </div>
